nextflow/non-experimental/work/cd/bbf0b1a31065da03794905674c5bad/.command.err
  File "/g/data/xl04/ka6418/github/ausarg/nextflow/non-experimental/work/cd/bbf0b1a31065da03794905674c5bad/.command.sh", line 105
    file_prefix = f"{"BASDU"}_{"PAF987"}_{"PACBIO_SMRT"}"
                      ^^^^^
SyntaxError: f-string: expecting '}'
